crates/concrete_driver/tests/invalid_programs/call_param_count_mismatch.con
mod Test {
    fn main() -> i32 {
        return hello(1, 2);
    }

    fn hello(a: i32) -> i32 {
        return a * 2;
    }
}
